--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <title>Bookiny</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div className="wrapper"><div id="root"></div></div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
